tests/algorithms/x/Clojure/project_euler/problem_035/sol1.error
run: exit status 1
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/project_euler/problem_035/sol1.clj:85:1153).
Can only recur from tail position

Full report at:
/tmp/clojure-17892244123481810106.edn
